# portfolio_cv_pwa

./: Cargo.toml  README.md  Trunk.toml  index.html  package-lock.json  service_worker.js
docs/: index.html  manifest.json  portfolio_cv_pwa.js  portfolio_cv_pwa_bg.wasm  tailwind_output.css
public/: tailwind_input.css
src/: app.rs  router.rs
src/components/: content.rs  cv_data.rs  mod.rs  navbar.rs  projects.rs  qrcode_modal.rs  sidebar.rs
src/components/pages/: home.rs  mod.rs  mycv.rs  not_found.rs
