[package]
name = "portfolio_cv_pwa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17.0"
web-sys = {version = "0.3.61", features=["Element", "ScrollToOptions", "ScrollBehavior"]}
wasm-bindgen = "0.2.84"
chrono = "0.4.23"
